Update Voting schema
