# public/openapi.json
@@ -551,6 +551,51 @@
         }
       }
     },
+    "/watchlist/{id}/pick/{pickId}": {
+      "post": {
+        "operationId": "post-watchlist-{id}-pick-{pickId}",
+        "summary": "Endpoint to submit a pick vote",
+        "description": "",
+        "tags": [
+          "Watchlist"
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "schema": {
+              "type": "string"
+            },
+            "required": true,
+            "example": "123"
+          },
+          {
+            "in": "path",
+            "name": "pickId",
+            "schema": {
+              "type": "string"
+            },
+            "required": true,
+            "example": "123"
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {}
+            }
+          }
+        },
+        "responses": {
+          "400": {
+            "$ref": "#/components/responses/400"
+          },
+          "500": {
+            "$ref": "#/components/responses/500"
+          }
+        }
+      }
+    },
     "/watchlist/{id}/pick/random": {
       "get": {
         "operationId": "get-watchlist-{id}-pick-random",
